unpackaged/main/default/objects/Opportunity_Competitor__c/Opportunity_Competitor__c.object-meta.xml
<CustomObject>
    <description>Opportunity Competitor</description>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC-{0000000}</displayFormat>
        <label>Opportunity Competitor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>