unpackaged/main/default/objects/Opportunity_Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>T1_Competitor__c</referenceTo>
    <relationshipLabel>Opportunity Competitors</relationshipLabel>
    <relationshipName>Opportunity_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>