unpackaged/main/default/objects/Opportunity_Competitor__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Managed Services</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Cash Receipting</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Human Resources and Payroll</fullName>
            </value>
            <value>
                <fullName>Property and Rating</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>