unpackaged/main/default/objects/Opportunity_Competitor__c/fields/System_Info__c.field-meta.xml
<CustomField>
    <fullName>System_Info__c</fullName>
    <description>Competitor System Info</description>
    <label>System Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Upgrade Existing</fullName>
            </value>
            <value>
                <fullName>Do Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>