unpackaged/main/default/objects/Opportunity_Competitor__c/validationRules/Competitor_Existss.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Existss</fullName>
    <active>true</active>
    <errorConditionFormula>Competitor__c = Competitor__r.Code_Id__c</errorConditionFormula>
    <errorMessage>Not a valid Competitor. Please select from Search.</errorMessage>
</ValidationRule>